fixed blurry color picker

--- a/src/scss/_options.scss
+++ b/src/scss/_options.scss
@@ -295,13 +295,30 @@
   width: 100%;
 }
 
+.color-picker-sv-wrap {
+  position: relative;
+  width: 100%;
+  aspect-ratio: $color-picker-sv-w / $color-picker-sv-h;
+}
+
 .color-picker-sv {
   display: block;
   width: 100%;
-  aspect-ratio: $color-picker-sv-w / $color-picker-sv-h;
+  height: 100%;
   border-radius: 3px;
   cursor: crosshair;
   touch-action: none;
+}
+
+.color-picker-dot {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  border: 1.5px solid white;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.6);
+  transform: translate(-50%, -50%);
+  pointer-events: none;
 }
 
 .color-picker-hue {
